<resources>
    <string name="app_name">Calculator</string>
    <string name="TopAppBar_Title">Calculator</string>
    <string name="TopAppBar_Menu">Open Menu</string>
    <string name="TopAppBar_PurgeHistory">Delete history</string>
    <string name="TopAppBar_RefreshRates">Update exchange rates</string>
    <string name="NavItem_Calculator">Calculator</string>
    <string name="NavItem_Currency">Currency</string>
    <string name="NavItem_Units">Units</string>
    <string name="Calculator_Error">Error</string>
    <string name="no_exchange_data">No exchange rate data available. Please go online or restart the app.</string>
    <string name="exchange_rates_as_of">Exchange rates as of:</string>
    <string name="next_rates_update">Next update:</string>
    <string name="no_data_available">No exchange rates available</string>
    <string name="update_due">Update due</string>
    <string name="Back">Back</string>
    <string name="Snackbar_CurRefreshData">Info: Rates update automatically, unless the Currency tab was open at %1$s local time. Manual refresh is only needed in that case.</string>
    <string name="Snackbar_CurRefreshData_Dismiss">Dismiss</string>
    <string name="show_keyboard">Show keyboard</string>
    <string name="hide_keyboard">Hide keyboard</string>
    <string name="copy_result">Copy result</string>
    <string name="result_copied">Result copied</string>
    <string name="copy_value">Copy value</string>
    <string name="value_copied">Value copied</string>
    <string name="select_unit_content_description">Select unit %1$s</string>
    <string name="change_unit_content_description">Change unit %1$s</string>
    <string name="select_currency_content_description">Select currency %1$s</string>
    <string name="change_currency_content_description">Change currency %1$s</string>
    <string name="TopAppBar_Haptics">Haptics</string>
    <string name="TopAppBar_Sound">Sound</string>
    <string name="Settings_Title">Settings</string>
    <string name="Settings_ThemeTitle">Theme</string>
    <string name="Settings_ThemeSystem">Follow system</string>
    <string name="Settings_ThemeLight">Light</string>
    <string name="Settings_ThemeDark">Dark</string>
    <string name="TopAppBar_Settings">Settings</string>
    <string name="Settings_BehaviorOptions">Behavior</string>
    <string name="Settings_OpenKeyboard">Open keyboard on app launch</string>
    <string name="Settings_ScientificDefault">Open scientific keyboard by default</string>
    <string name="shortcut_standard">Standard Calculator</string>
    <string name="shortcut_standard_long">Open Standard Calculator</string>
    <string name="shortcut_scientific">Scientific Calculator</string>
    <string name="shortcut_scientific_long">Open Scientific Calculator</string>
    <string name="shortcut_currency">Currency Converter</string>
    <string name="shortcut_currency_long">Open Currency Converter</string>
    <string name="shortcut_units">Unit Converter</string>
    <string name="shortcut_units_long">Open Unit Converter</string>
    <string name="key_clear">Clear</string>
    <string name="key_backspace">Backspace</string>
    <string name="key_percent">Percent</string>
    <string name="key_divide">Divide</string>
    <string name="key_multiply">Multiply</string>
    <string name="key_minus">Minus</string>
    <string name="key_plus">Plus</string>
    <string name="key_decimal_point">Decimal point</string>
    <string name="key_equals">Equals</string>
    <string name="key_switch_mode">Switch mode</string>
    <string name="key_inverse">Inverse</string>
    <string name="key_degree">Degree mode</string>
    <string name="key_radian">Radian mode</string>
    <string name="key_power">Power</string>
    <string name="key_log10">Log base 10</string>
    <string name="key_exp10">Ten to the power of</string>
    <string name="key_ln">Natural logarithm</string>
    <string name="key_exp">Exponential</string>
    <string name="key_left_paren">Left parenthesis</string>
    <string name="key_right_paren">Right parenthesis</string>
    <string name="key_square">Square</string>
    <string name="key_sqrt">Square root</string>
    <string name="key_reciprocal">Reciprocal</string>
    <string name="key_factorial">Factorial</string>
    <string name="key_pi">Pi</string>
    <string name="key_eulers_number">Euler\'s number</string>
    <string name="key_sin">Sine</string>
    <string name="key_sin_inverse">Inverse sine</string>
    <string name="key_cos">Cosine</string>
    <string name="key_cos_inverse">Inverse cosine</string>
    <string name="key_tan">Tangent</string>
    <string name="key_tan_inverse">Inverse tangent</string>
    <string name="UnitConvCat_Length">Length</string>
    <string name="UnitConvCat_Weight">Weight</string>
    <string name="UnitConvCat_Volume">Volume</string>
    <string name="UnitConvCat_Area">Area</string>
    <string name="UnitConvCat_Temperature">Temperature</string>
    <string name="UnitConvCat_Time">Time</string>
    <string name="UnitConvCat_Speed">Speed</string>
    <string name="UnitConvCat_Energy">Energy</string>
    <string name="UnitConvCat_Power">Power</string>
    <string name="UnitConvCat_Pressure">Pressure</string>
    <string name="UnitConvCat_Frequency">Frequency</string>
    <string name="UnitConvCat_Data">Data</string>
    <string name="UnitConvCat_FuelEconomy">Fuel\nEconomy</string>
    <string name="UnitConvCat_PlaneAngle">Plane\nAngle</string>
    <string name="UnitConvCat_Amount">Amount</string>
    <string name="UnitConvCatLength_Meter">m - Meter</string>
    <string name="UnitConvCatLength_Kilometer">km - Kilometer</string>
    <string name="UnitConvCatLength_Centimeter">cm - Centimeter</string>
    <string name="UnitConvCatLength_Millimeter">mm - Millimeter</string>
    <string name="UnitConvCatLength_Mile">mi - Mile</string>
    <string name="UnitConvCatLength_Yard">yd - Yard</string>
    <string name="UnitConvCatLength_Foot">ft - Foot</string>
    <string name="UnitConvCatLength_Inch">in - Inch</string>
    <string name="UnitConvCatLength_NauticalMile">NM - Nautical Mile</string>
    <string name="UnitConvCatLength_LightYear">ly - Light Year</string>
    <string name="UnitConvCatLength_Parsec">pc - Parsec</string>
    <string name="UnitConvCatLength_Nanometer">nm - Nanometer</string>
    <string name="UnitConvCatLength_Micrometer">µm - Micrometer</string>
    <string name="UnitConvCatLength_Angstrom">Å - Ångström</string>
    <string name="UnitConvCatLength_AstronomicalUnit">AU - Astronomical Unit</string>
    <string name="UnitConvCatLength_KilometerPerSecond">km/s - Kilometer per Second</string>
    <string name="UnitConvCatWeight_Kilogram">kg - Kilogram</string>
    <string name="UnitConvCatWeight_Gram">g - Gram</string>
    <string name="UnitConvCatWeight_Milligram">mg - Milligram</string>
    <string name="UnitConvCatWeight_Pound">lb - Pound</string>
    <string name="UnitConvCatWeight_Ounce">oz - Ounce</string>
    <string name="UnitConvCatWeight_Tonne">t - Tonne</string>
    <string name="UnitConvCatWeight_Stone">st - Stone</string>
    <string name="UnitConvCatWeight_US_Ton">US ton - US Ton</string>
    <string name="UnitConvCatWeight_Carat">ct - Carat</string>
    <string name="UnitConvCatWeight_ShortHundredweight">cwt - Hundredweight (short)</string>
    <string name="UnitConvCatWeight_LongHundredweight">cwt (long) - Hundredweight (long)</string>
    <string name="UnitConvCatWeight_LongTon">LT - Long Ton</string>
    <string name="UnitConvCatVolume_Liter">L - Liter</string>
    <string name="UnitConvCatVolume_Milliliter">mL - Milliliter</string>
    <string name="UnitConvCatVolume_CubicMeter">m³ - Cubic Meter</string>
    <string name="UnitConvCatVolume_GallonUS">gal (US) - Gallon (US)</string>
    <string name="UnitConvCatVolume_PintUS">pt (US) - Pint (US)</string>
    <string name="UnitConvCatVolume_FluidOunceUS">fl oz (US) - Fluid Ounce (US)</string>
    <string name="UnitConvCatVolume_CupUS">cup (US) - Cup (US)</string>
    <string name="UnitConvCatVolume_GallonUK">gal (UK) - Gallon (UK)</string>
    <string name="UnitConvCatVolume_TeaspoonUS">tsp (US) - Teaspoon (US)</string>
    <string name="UnitConvCatVolume_TablespoonUS">tbsp (US) - Tablespoon (US)</string>
    <string name="UnitConvCatVolume_QuartUS">qt (US) - Quart (US)</string>
    <string name="UnitConvCatVolume_QuartUK">qt (UK) - Quart (UK)</string>
    <string name="UnitConvCatVolume_PintUK">pt (UK) - Pint (UK)</string>
    <string name="UnitConvCatVolume_FluidOunceUK">fl oz (UK) - Fluid Ounce (UK)</string>
    <string name="UnitConvCatVolume_TeaspoonUK">tsp (UK) - Teaspoon (UK)</string>
    <string name="UnitConvCatVolume_TablespoonUK">tbsp (UK) - Tablespoon (UK)</string>
    <string name="UnitConvCatArea_SquareMeter">m² - Square Meter</string>
    <string name="UnitConvCatArea_SquareKilometer">km² - Square Kilometer</string>
    <string name="UnitConvCatArea_SquareCentimeter">cm² - Square Centimeter</string>
    <string name="UnitConvCatArea_Hectare">ha - Hectare</string>
    <string name="UnitConvCatArea_Acre">ac - Acre</string>
    <string name="UnitConvCatArea_SquareFoot">ft² - Square Foot</string>
    <string name="UnitConvCatArea_SquareMile">mi² - Square Mile</string>
    <string name="UnitConvCatArea_SquareMillimeter">mm² - Square Millimeter</string>
    <string name="UnitConvCatArea_SquareInch">in² - Square Inch</string>
    <string name="UnitConvCatArea_SquareYard">yd² - Square Yard</string>
    <string name="UnitConvCatTemperature_Celsius">°C - Celsius</string>
    <string name="UnitConvCatTemperature_Fahrenheit">°F - Fahrenheit</string>
    <string name="UnitConvCatTemperature_Kelvin">K - Kelvin</string>
    <string name="UnitConvCatTemperature_Rankine">°R - Rankine</string>
    <string name="UnitConvCatTime_Second">s - Second</string>
    <string name="UnitConvCatTime_Minute">min - Minute</string>
    <string name="UnitConvCatTime_Hour">h - Hour</string>
    <string name="UnitConvCatTime_Day">d - Day</string>
    <string name="UnitConvCatTime_Week">wk - Week</string>
    <string name="UnitConvCatTime_Millisecond">ms - Millisecond</string>
    <string name="UnitConvCatTime_Microsecond">µs - Microsecond</string>
    <string name="UnitConvCatTime_Nanosecond">ns - Nanosecond</string>
    <string name="UnitConvCatTime_Month">mo - Month</string>
    <string name="UnitConvCatTime_Year">yr - Year</string>
    <string name="UnitConvCatSpeed_MeterPerSecond">m/s - Meter/Second</string>
    <string name="UnitConvCatSpeed_KilometerPerHour">km/h - Kilometer/Hour</string>
    <string name="UnitConvCatSpeed_MilePerHour">mph - Mile/Hour</string>
    <string name="UnitConvCatSpeed_Knot">kt - Knot</string>
    <string name="UnitConvCatSpeed_Mach">Ma - Mach</string>
    <string name="UnitConvCatSpeed_FootPerSecond">ft/s - Foot/Second</string>
    <string name="UnitConvCatSpeed_KilometerPerSecond">km/s - Kilometer/Second</string>
    <string name="UnitConvCatEnergy_Joule">J - Joule</string>
    <string name="UnitConvCatEnergy_Kilojoule">kJ - Kilojoule</string>
    <string name="UnitConvCatEnergy_Calorie">cal - Calorie</string>
    <string name="UnitConvCatEnergy_Kilocalorie">kcal - Kilocalorie</string>
    <string name="UnitConvCatEnergy_WattHour">Wh - Watt-Hour</string>
    <string name="UnitConvCatEnergy_KilowattHour">kWh - Kilowatt-Hour</string>
    <string name="UnitConvCatEnergy_Electronvolt">eV - Electronvolt</string>
    <string name="UnitConvCatEnergy_BTU">BTU - British Thermal Unit</string>
    <string name="UnitConvCatEnergy_Erg">erg - Erg</string>
    <string name="UnitConvCatEnergy_FootPound">ft·lb - Foot-Pound</string>
    <string name="UnitConvCatPower_Watt">W - Watt</string>
    <string name="UnitConvCatPower_Kilowatt">kW - Kilowatt</string>
    <string name="UnitConvCatPower_Horsepower">hp - Horsepower</string>
    <string name="UnitConvCatPower_Megawatt">MW - Megawatt</string>
    <string name="UnitConvCatPower_MetricHorsepower">PS - Metric Horsepower</string>
</resources>